Include a correct link in footer to who we are page instead of why us. Correct translations

--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -65,7 +65,7 @@
     "about": "About",
     "contact": "Contact",
     "what": "What we do",
-    "why": "Why us",
+    "who": "Who we are",
     "how": "How it works"
   },
   "who_page": {
