--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -65,7 +65,7 @@
     "about": "Om",
     "contact": "Kontakt",
     "what": "Hva vi gjør",
-    "why": "Hvorfor oss",
+    "who": "Hvem vi er",
     "how": "Hvordan det fungerer"
   },
   "who_page": {
