Add link to platform

--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -8,6 +8,7 @@
   "rainbed2": "Rain garden",
   "indoor2": "Indoor",
   "who": "WHO WE ARE",
+  "platform": "PLATFORM",
   "about": "ABOUT",
   "what": "WHAT WE DO",
   "why": "WHY US",
