--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -8,6 +8,7 @@
   "rainbed2": "Regnbed",
   "indoor2": "Innendørs",
   "who": "HVEM VI ER",
+  "platform": "PLATTFORM",
   "about": "OM",
   "what": "HVA VI GJØR",
   "why": "HVORFOR OSS",
